--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.3",
+    "@types/react": "^17.0.31",
+    "@types/react-dom": "^17.0.10",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
